@@ -697,6 +697,28 @@
 			//assert
 			test.equals(result, patternlab.patterns[0]);
 			test.done();
+		},
+		'get_pattern_by_key - returns the exact key if found' : function(test){
+			//arrange
+			var pattern_assembler = new pa();
+			var patternlab = {};
+			patternlab.patterns = [];
+
+			patternlab.patterns.push({
+				key: 'molecules-primary-nav-jagged',
+				subdir: 'molecules',
+				fileName: 'primary-nav-jagged'
+			}, {
+				key: 'molecules-primary-nav',
+				subdir: 'molecules',
+				fileName: 'molecules-primary-nav'
+			});
+
+			//act
+			var result = pattern_assembler.get_pattern_by_key('molecules-primary-nav', patternlab);
+			//assert
+			test.equals(result, patternlab.patterns[1]);
+			test.done();
 		}
 	};
 }());
